syntax = "proto3";
package saonetwork.sao.node;

option go_package = "github.com/SaoNetwork/sao/x/node/types";
import "gogoproto/gogo.proto"; 
import "cosmos/base/v1beta1/coin.proto"; 

message Shard {
  string idx = 1; 
  uint64 orderId = 2; 
  string node = 3; 
  string dataId = 4;
  string cid = 5; 
  int32 status = 6; 
  uint64 size = 7; 
  cosmos.base.v1beta1.Coin pledged = 8 [(gogoproto.nullable) = false]; 
  string from = 9; 
  int32 index = 10;
  uint64 createdAt = 11;
  uint64 expiredAt = 12;
}

